--- a/modulo 3/ex022/fundo006.html
+++ b/modulo 3/ex022/fundo006.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
+            /*
             height: 100vh;
             background-color: black;
             background-image: url("imagens/wallpaper002.jpg");
             background-position: center center;
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+
+            shorthand-background
+                color > image > position > repet > [size] > attachment
+            */
+
+            background: black url("imagens/wallpaper002.jpg") center center no-repeat fixed;
             background-size: cover;
         }
 
@@ -25,46 +35,91 @@
         }
     </style>
 </head>
+
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est quis quidem quae libero rem, officiis iure doloremque sapiente totam laudantium voluptatem nemo maiores debitis atque accusamus iusto voluptas quasi? Et.
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus adipisci vitae fugiat fuga rerum! Esse, praesentium delectus deleniti porro omnis eius est ipsa officia fugiat? Asperiores blanditiis ex illum iste.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo autem minus, quibusdam minima saepe explicabo ipsam a molestias? Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est quis quidem quae libero rem, officiis iure
+            doloremque sapiente totam laudantium voluptatem nemo maiores debitis atque accusamus iusto voluptas quasi?
+            Et.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus adipisci vitae fugiat fuga rerum! Esse,
+            praesentium delectus deleniti porro omnis eius est ipsa officia fugiat? Asperiores blanditiis ex illum iste.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo autem minus, quibusdam minima saepe explicabo
+            ipsam a molestias? Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis
+            suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
             Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita
+            dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita
+            dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita
+            dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita
+            dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita
+            dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita
+            dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita
+            dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita
+            dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita
+            dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita
+            dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita
+            dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita
+            dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita
+            dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita
+            dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.Expedita
+            dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
             Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
             Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
             Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
             Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
 
             Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
             Expedita dolor velit dolore blanditiis omnis placeat sed consectetur sint perspiciatis suscipit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde vitae ratione quidem excepturi! Nemo
+            dolorem incidunt vero culpa id quaerat eos eligendi nam, optio quo atque ratione fugit aliquid.
         </p>
 
     </main>
 </body>
+
 </html>
