--- a/modulo2/Desafio/d010/android.html
+++ b/modulo2/Desafio/d010/android.html
@@ -28,14 +28,16 @@
             <p>Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo
                 <strong>Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez
                 você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse
-                artigo para aprender muita coisa sobre esse robozinho.</p>
+                artigo para aprender muita coisa sobre esse robozinho.
+            </p>
 
             <h2>A primeira versão</h2>
 
             <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a
                     href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/"
-                    target="_blank" class="externo">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt/"
-                    target="_blank" class="externo">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão
+                    target="_blank" class="externo">Dan Morrill</a>. Ele conta que abriu o <a
+                    href="https://inkscape.org/pt/" target="_blank" class="externo">Inkscape</a> (software livre para
+                vetorização de imagens) e criou sua própria versão
                 de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma
                 solicitação da empresa para a criação de um mascote.</p>
 
@@ -45,12 +47,14 @@
             </picture>
 
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os
-                <strong>Dandroids</strong>.</p>
+                <strong>Dandroids</strong>.
+            </p>
 
             <h2>Surge um novo mascote</h2>
 
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A
-                ilustradora Russa <a href="https://www.irinablok.com/" target="_blank" class="externo">Irina Blok</a>, também
+                ilustradora Russa <a href="https://www.irinablok.com/" target="_blank" class="externo">Irina Blok</a>,
+                também
                 funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
             </p>
 
@@ -61,7 +65,8 @@
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O
                 desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o
-                <strong>Bugdroid</strong>, o novo mascote do Android.</p>
+                <strong>Bugdroid</strong>, o novo mascote do Android.
+            </p>
 
             <img src="imagens/bugdroid.png" class="pequena" alt="bugdroid">
 
@@ -106,7 +111,8 @@
                 <p>Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa
                     divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
 
-                <p>Acesse aqui o site <a href="https://www.android.com/what-is-android/" target="_blank" class="externo">Android
+                <p>Acesse aqui o site <a href="https://www.android.com/what-is-android/" target="_blank"
+                        class="externo">Android
                         History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o
                     sistema Android.</p>
             </aside>
@@ -119,7 +125,8 @@
     <footer>
         <p>Site criado por <a href="https://github.com/gustavoguanabara/html-css/tree/master/aulas-pdf"
                 target="_blank">Rafael Cayres</a> para o <a href="https://www.cursoemvideo.com/"
-                target="_blank">CursoemVideo</a>.</p>
+                target="_blank">CursoemVideo</a>.
+            </p>
     </footer>
 </body>
 
