--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -5,8 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
+    <style>
+        body {
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
+
+        table {
+            width: 400px;
+            border-collapse: collapse; /*remove o espaco entre as celulas*/
+        }
+
+        tr.linha {
+            background-color: blue;
+        }
+
+        td {
+            border: 1px solid black;
+            padding: 8px;
+        }
+
+        td.dado {
+            background-color: yellow;
+        }
+
+
+    </style>
 </head>
 <body>
-    
+    <!--
+            Hierarqui de trabelas (simples)
+            TABLE = Tabela
+                TABLE ROW = linha da tabela
+                    TABLE HEADER = cabecalho de tabela
+                    TABLE DATA = dado de tabela
+        -->
+    <h1>Minha primeira tabela</h1>
+    <table>
+        <tr> <!--Primeira linha-->
+            <td>A1</td>
+            <td>B1</td>
+            <td>C1</td>
+        </tr>
+        <tr class="linha"><!--Segunda linha-->
+            <td>A2</td>
+            <td>B2</td>
+            <td>C2</td>
+        </tr>
+        <tr><!--Terceira linha-->
+            <td>A3</td>
+            <td class="dado">B3</td>
+            <td>C3</td>
+        </tr>
+        <tr><!--Quarta linha-->
+            <td>A4</td>
+            <td>B4</td>
+            <td>C4</td>
+        </tr>
+        <tr><!--Quinta linha-->
+            <td>A5</td>
+            <td>B5</td>
+        </tr>
+        <tr><!--Sexta linha-->
+            <td>A6</td>
+        </tr>
+
+    </table>
 </body>
 </html>
