--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -5,11 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        iframe {
+            width: 300px;
+            display: block;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
     <h1>Teste com iframe</h1>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A placeat libero natus at suscipit esse sapiente ullam rerum blanditiis laudantium. Iste, illo vitae error non vel dolore amet reiciendis soluta!</p>
+
+    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet iusto, assumenda a rem laborum repellendus fuga consequatur ipsam maiores debitis, quam laboriosam. Reprehenderit perferendis non ex laudantium! Nemo, quia autem.</p>
 
